// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Smartphone /> toMatchSnapshot 1`] = `
<div
  className="Smartphone-s165niw0-0 dRCHgZ"
/>
`;

exports[`<Smartphone /> toMatchSnapshot 2 1`] = `
<div
  className="Smartphone-s165niw0-0 kMAOzs"
/>
`;
